from .base_api import BaseApi


class UserApi(BaseApi):
    def __init__(self) -> None:
        raise NotImplementedError()
